--- a/UBG.vcxproj.filters
+++ b/UBG.vcxproj.filters
@@ -9,5 +9,16 @@
     <ClCompile Include="src\UBG.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\UBG_PlatformWin32.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\UBG_PlatformWin32.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\UBG_Platform.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
