--- a/UBG.vcxproj.filters
+++ b/UBG.vcxproj.filters
@@ -12,6 +12,9 @@
     <ClCompile Include="src\UBG_PlatformWin32.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\UBG_GfxDX11.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\UBG_PlatformWin32.h">
@@ -21,6 +24,12 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="src\UBG.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\UBG_Gfx.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\UBG_GfxDX11.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
