Implement clock, call gfx backend impl

--- a/UBG.vcxproj
+++ b/UBG.vcxproj
@@ -78,11 +78,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Clock.cpp" />
     <ClCompile Include="src\UBG.cpp" />
     <ClCompile Include="src\UBG_GfxDX11.cpp" />
     <ClCompile Include="src\UBG_PlatformWin32.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Clock.h" />
     <ClInclude Include="src\UBG.h" />
     <ClInclude Include="src\UBG_Gfx.h" />
     <ClInclude Include="src\UBG_GfxDX11.h" />
