--- a/UBG.vcxproj.filters
+++ b/UBG.vcxproj.filters
@@ -4,6 +4,9 @@
     <Filter Include="src">
       <UniqueIdentifier>{0d2b8897-6957-426e-94bf-37bd4c17f23c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\hlsl">
+      <UniqueIdentifier>{8d32feef-2664-444e-a7fd-bfd281caccaa}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\UBG.cpp">
@@ -44,5 +47,10 @@
     <ClInclude Include="src\Math.h">
       <Filter>src</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="src\hlsl\BaseShader.hlsl">
+      <Filter>src\hlsl</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
