Implement basic texture, unicolor shaders

--- a/UBG.vcxproj
+++ b/UBG.vcxproj
@@ -94,7 +94,15 @@
     <ClInclude Include="src\UBG_PlatformWin32.h" />
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="src\hlsl\BaseShader.hlsl">
+    <FxCompile Include="src\hlsl\BaseShaderColor.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </FxCompile>
+    <FxCompile Include="src\hlsl\BaseShaderTexture.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </FxCompile>
+    <FxCompile Include="src\hlsl\BaseShaderUnicolor.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </FxCompile>
