--- a/UBG.vcxproj.filters
+++ b/UBG.vcxproj.filters
@@ -49,7 +49,13 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="src\hlsl\BaseShader.hlsl">
+    <FxCompile Include="src\hlsl\BaseShaderColor.hlsl">
+      <Filter>src\hlsl</Filter>
+    </FxCompile>
+    <FxCompile Include="src\hlsl\BaseShaderTexture.hlsl">
+      <Filter>src\hlsl</Filter>
+    </FxCompile>
+    <FxCompile Include="src\hlsl\BaseShaderUnicolor.hlsl">
       <Filter>src\hlsl</Filter>
     </FxCompile>
   </ItemGroup>
