--- a/UBG.vcxproj.filters
+++ b/UBG.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="src\Input.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\Utils.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\UBG_PlatformWin32.h">
@@ -51,6 +54,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="src\Input.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Utils.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
