--- a/UBG.vcxproj
+++ b/UBG.vcxproj
@@ -87,6 +87,7 @@
     <ClCompile Include="src\Math.cpp" />
     <ClCompile Include="src\Memory.cpp" />
     <ClCompile Include="src\UBG.cpp" />
+    <ClCompile Include="src\UBG_GfxCommon.cpp" />
     <ClCompile Include="src\UBG_GfxDX11.cpp" />
     <ClCompile Include="src\UBG_PlatformWin32.cpp" />
     <ClCompile Include="src\Utils.cpp" />
