--- a/UBG.vcxproj.filters
+++ b/UBG.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="src\Memory.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\UBG_GfxCommon.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\UBG_PlatformWin32.h">
