--- a/UBG.vcxproj
+++ b/UBG.vcxproj
@@ -85,6 +85,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Clock.cpp" />
+    <ClCompile Include="src\Collision.cpp" />
     <ClCompile Include="src\UBGame.cpp" />
     <ClCompile Include="src\Input.cpp" />
     <ClCompile Include="src\Math.cpp" />
@@ -98,6 +99,7 @@
   <ItemGroup>
     <ClInclude Include="src\Array.h" />
     <ClInclude Include="src\Clock.h" />
+    <ClInclude Include="src\Collision.h" />
     <ClInclude Include="src\ListID.h" />
     <ClInclude Include="src\UBGame.h" />
     <ClInclude Include="src\Input.h" />
