--- a/UBG.vcxproj.filters
+++ b/UBG.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="src\UBGame.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\Collision.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\UBG_PlatformWin32.h">
@@ -84,6 +87,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="src\ListID.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Collision.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
